2009-02-11 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am:
	[ 2583170 ] Add test rule including gcov 

2009-02-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac:
	[ 2581295 ] Add GNU code coverage tool support for SFCB.
	(patch from Surendra Kodali)

2009-02-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* genSslCert.sh:
	[ 2561165 ] The genSslCert.sh SSL certificate setup has tempfile races. 
	(patch from Klaus Kämpf)

2009-02-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/unittest/Makefile.am, test/unittest/EmbeddedTests.c,
	  trace.h, trace.c:
	Initial framework for embedded unittest

2009-02-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c:
	[ 2192062 ] providerMgr doesn't check forkProvider() return values
	(patch from Klaus Kämpf)

2009-01-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, providerMgr.c:
	[ 2550426 ] Concurrency issue with LocalConnect

	* msgqueue.c:
	[ 2550880 ] sfcb sometimes hangs when processing large messages
	
2009-01-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2390533 ] Memory leak in httpAdapter.c
	(patch from John Powell)

2009-01-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac test/Makefile.am test/finaltest/Makefile.am
	  test/finaltest/finalcheck.sh:
	Added confirmation of all test success

2009-01-26  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2531609 ] CIM_ListenerDestinationCIMXML not enforcing "Required"

2009-01-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* datetime.c
	[ 2521173 ] DST being handled incorrectly

2009-01-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am fileRepository.c fileRepository.h objectImpl.c
	  objectImpl.h sfcbrepos.sh.in sfcbinst2mof.c(new file):
	[ 2140807 ] Indication subscriptions don't persist across sfcbrepos
	(patch by Norm Paxton)
