@@ -59,6 +59,7 @@ Bugs fixed:
 - 2550880 sfcb sometimes hangs when processing large messages
 - 2192062 providerMgr doesn't check forkProvider() return values
 - 2561165 The genSslCert.sh SSL certificate setup has tempfile races. 
+- 2551127 httpAdapter may not terminate
 
 Changes in 1.3.2
 ================
