@@ -1,3 +1,9 @@
+2009-02-11  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* httpAdapter.c:
+	[ 2551127 ] httpAdapter may not terminate
+	(patch by Viktor Mihajlovski)
+
 2009-02-11 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* Makefile.am:
